kuber/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: popovmi-tictactoe-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
  namespace: popovmi-tictactoe
  labels:
    project: popovmi-tictactoe
spec:
  defaultBackend:
    service:
      name: popovmi-tictactoe-server
      port:
        number: 80
